--- a/class13.html
+++ b/class13.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>Shopping Cart</title
+    <title>Shopping Cart</title>
     <link rel="shortcut icon" href="./assets/logos/icon-sello.svg" type="img">
     <style>
         :root {
