--- a/index.html
+++ b/index.html
@@ -73,6 +73,46 @@
             </ul>
         </div>
 
+        <div class="mobile-menu inactive">
+            <ul>
+                <li>
+                    <a href="/">ACCESORIOS</a>
+                </li>
+                <li>
+                    <a href="/">Pulsera</a>
+                </li>
+                <li>
+                    <a href="/">Anillo</a>
+                </li>
+                <li>
+                    <a href="/">Aretes</a>
+                </li>
+                <li>
+                    <a href="/">Collar</a>
+                </li>
+                <li>
+                    <a href="/">Gargantilla</a>
+                </li>
+            </ul>
+                
+            <ul>
+                <li>
+                    <a href="/">Mis pedidos</a>
+                </li>
+                <li>
+                    <a href="/">Mi cuenta</a>
+                </li>
+            </ul>
+        
+            <ul>
+                <li>
+                    <a href="/" class="email">shkakimx@gmail.com</a>
+                </li>
+                <li>
+                    <a href="/" class="sign-out">Cerrar sesión</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <script src="./main.js"></script>
