--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </aside>
 
     <aside id="productDetail" class="inactive">
-        <div class="aside-close">
+        <div class="product-detail-close">
             <img src="./assets/icons/icon_close.png" alt="close">
         </div>
         <img src="./assets/pack3-LaTCr.svg" alt="Pack 3 pulseras">
@@ -234,8 +234,6 @@
             -->
         </div>
     </section>
-
-
 
     <script src="./main.js"></script>
 </body>
